feat: implement cabinet list query
